--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -23,6 +23,7 @@
         android:layout_marginEnd="16dp"
         android:src="@drawable/aws"
         app:civ_border_width="2dp"
+        app:civ_border_color="#FF000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView" />
 
